--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qtstyleplugins-src (5.0.0+git16.g7aa4764-1) UNRELEASED; urgency=medium
+
+  [ Dmitry Shachnev ]
+  * New upstream snapshot.
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Dec 2016 15:34:18 +0300
+
 qtstyleplugins-src (5.0.0-1) unstable; urgency=low
 
   * Initial release.
