--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ qtstyleplugins-src (5.0.0+git16.g7aa4764-1) UNRELEASED; urgency=medium
   [ Dmitry Shachnev ]
   * New upstream snapshot.
     - Drop upstream_Cleanlooks-style-Fix-floating-point-exception.patch.
+  * Build-depend on libgtk2.0-dev and libx11-dev, for the GTK+ 2 style
+    and platformtheme.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Dec 2016 15:34:18 +0300
 
