--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtstyleplugins-src (5.0.0+git16.g7aa4764-1) UNRELEASED; urgency=medium
     - Drop upstream_Cleanlooks-style-Fix-floating-point-exception.patch.
   * Build-depend on libgtk2.0-dev and libx11-dev, for the GTK+ 2 style
     and platformtheme.
+  * Update the package description to mention the GTK+ platform theme.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Dec 2016 15:34:18 +0300
 
