Use HTTPS in Vcs-Git and Vcs-Browser fields.

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ qtstyleplugins-src (5.0.0+git16.g7aa4764-1) UNRELEASED; urgency=medium
   * Update the package description to mention the GTK+ platform theme.
   * Break/Replace all versions of libqt5libqgtk2.
   * Update debian/copyright.
+  * Use HTTPS in Vcs-Git and Vcs-Browser fields.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Dec 2016 15:34:18 +0300
 
