--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ qtstyleplugins-src (5.0.0+git16.g7aa4764-1) UNRELEASED; urgency=medium
   * Break/Replace all versions of libqt5libqgtk2.
   * Update debian/copyright.
   * Use HTTPS in Vcs-Git and Vcs-Browser fields.
+  * Bump Standards-Version to 3.9.8, no changes needed.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Dec 2016 15:34:18 +0300
 
