--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,8 @@
-qtstyleplugins-src (5.0.0+git23.g335dbec-1) UNRELEASED; urgency=medium
+qtstyleplugins-src (5.0.0+git23.g335dbec-1) unstable; urgency=medium
 
-  [ Dmitry Shachnev ]
   * New upstream snapshot, compatible with Qt 5.8+.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 17 Jun 2017 18:06:10 +0300
+ -- Dmitry Shachnev <mitya57@debian.org>  Sat, 17 Jun 2017 21:16:16 +0300
 
 qtstyleplugins-src (5.0.0+git16.g7aa4764-1) unstable; urgency=medium
 
