--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,8 @@
 qtstyleplugins-src (5.0.0+git23.g335dbec-2) UNRELEASED; urgency=medium
 
+  [ Pino Toscano ]
+  * Limit the libmtdev-dev build dependency to Linux architectures, as it is
+    needed only there.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 25 Jun 2017 19:42:03 +0200
 
