--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,10 @@
-qtstyleplugins-src (5.0.0+git23.g335dbec-2) UNRELEASED; urgency=medium
+qtstyleplugins-src (5.0.0+git23.g335dbec-2) unstable; urgency=medium
 
-  [ Pino Toscano ]
   * Limit the libmtdev-dev build dependency to Linux architectures, as it is
     needed only there.
   * Bump Standards-Version to 4.0.0, no changes required.
 
- -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 25 Jun 2017 19:42:03 +0200
+ -- Pino Toscano <pino@debian.org>  Sun, 25 Jun 2017 19:44:50 +0200
 
 qtstyleplugins-src (5.0.0+git23.g335dbec-1) unstable; urgency=medium
 
