Remove Fathi Boudra from Uploaders list.
Closes: #879428.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,7 @@
 qtstyleplugins-src (5.0.0+git23.g335dbec-3) UNRELEASED; urgency=medium
 
+  [ Dmitry Shachnev ]
+  * Remove Fathi Boudra from Uploaders list (closes: #879428).
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 23 Oct 2017 23:00:53 +0300
 
