--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,7 @@ qtstyleplugins-src (5.0.0+git23.g335dbec-3) UNRELEASED; urgency=medium
   * Update to debhelper compat level 11.
   * Use dh_auto_configure provided by debhelper (closes: #888044).
   * Update Vcs fields for migration to salsa.debian.org.
+  * Use https protocol in Format field in debian/copyright.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 23 Oct 2017 23:00:53 +0300
 
