switch Homepage to https://www.qt.io/

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ qtstyleplugins-src (5.0.0+git23.g335dbec-3) UNRELEASED; urgency=medium
 
   [ Pino Toscano ]
   * Bump Standards-Version to 4.1.4, no changes required.
+  * Switch Homepage to https://www.qt.io/.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 23 Oct 2017 23:00:53 +0300
 
