--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,39 @@
+qtstyleplugins-src (5.0.0+git23.g335dbec-2build6) cosmic; urgency=medium
+
+  * No-change rebuild against qtbase-abi-5-11-0.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 30 Jun 2018 23:57:53 -0500
+
+qtstyleplugins-src (5.0.0+git23.g335dbec-2build5) bionic; urgency=medium
+
+  * No-change rebuild against qtbase-abi-5-9-5.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Sat, 14 Apr 2018 22:00:49 -0500
+
+qtstyleplugins-src (5.0.0+git23.g335dbec-2build4) bionic; urgency=medium
+
+  * No-change rebuild against qtbase-abi-5-9-4.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 27 Feb 2018 09:50:06 -0600
+
+qtstyleplugins-src (5.0.0+git23.g335dbec-2build3) bionic; urgency=medium
+
+  * No-change rebuild for new Qt.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 21 Dec 2017 15:58:46 -0600
+
+qtstyleplugins-src (5.0.0+git23.g335dbec-2build2) bionic; urgency=medium
+
+  * No-change rebuild against qtbase5-private-dev.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 03 Nov 2017 17:27:21 -0500
+
+qtstyleplugins-src (5.0.0+git23.g335dbec-2build1) artful; urgency=medium
+
+  * No change rebuild against Qt 5.9.
+
+ -- Dmitry Shachnev <mitya57@ubuntu.com>  Sun, 13 Aug 2017 21:16:36 +0300
+
 qtstyleplugins-src (5.0.0+git23.g335dbec-2) unstable; urgency=medium
 
   * Limit the libmtdev-dev build dependency to Linux architectures, as it is
