--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qtstyleplugins-src (5.0.0+git23.g335dbec-2ubuntu1) cosmic; urgency=medium
+
+  * Split the themes into separate binary packages for easier distribution.
+
+ -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 09 Aug 2018 15:34:28 -0500
+
 qtstyleplugins-src (5.0.0+git23.g335dbec-2build6) cosmic; urgency=medium
 
   * No-change rebuild against qtbase-abi-5-11-0.
